<resources>
    <string name="app_name">AndroidToolBox</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ConnexionTexte">Connexion</string>
    <string name="IdentifiantTexte">Identifiant</string>
    <string name="MotDePasseTexte">mot de passe</string>
    <string name="ValiderTexte">Valider</string>
    <string name="BonjourTexte">Bonjour</string>
    <string name="PermissionTexte">Permission</string>
    <string name="SauvegardeTexte">Sauvegarde</string>
    <string name="CycleDeVieTexte">Cycle de Vie</string>
    <string name="TelechargementTexte">Téléchargement</string>
    <string name="CycleDeVieIntro">Cycle de Vie</string>
    <string name="TexteOnStart" />
    <string name="TextOnStart" />
    <string name="TextOnCreate" />
    <string name="saveButton">SAVE</string>
    <string name="idDeco">Deconnexion</string>
    <string name="NameTexte">Name</string>
    <string name="LastNameTexte">LastName</string>
    <string name="DateTexte">Date de naissance</string>
    <string name="TexteSauvegarde1">Sauvegarde</string>
    <string name="SentButton">Envoyer</string>
    <string name="ReadText">READ</string>
    <string name="SaisieDate">../../..</string>
    <string name="DateSaisie">../../..</string>
    <string name="TitreTexte">Acces Aux Informations Android</string>
    <string name="ContactTexte" />
    <string name="ContactText">Contacts de Mario Jammayrac</string>
    <string name="ContactsText">Contact de MArio JAMMAYRAC</string>
    <string name="image">Image</string>
    <string name="titre_informations">Informations</string>
    <string name="bluetooth_button">bluetooth_button</string>
    <string name="textWebServ">WebService</string>
    <string name="TextMenu">Menu Stylé :</string>
    <string name="TextduMenu">Appli du Swag</string>
    <string name="Bluetooth" />
    <string name="bletext">Bluetooth</string>
    <string name="TexteduMenu">Menu de Mario</string>
    <string name="BleTxt">Lancer Scan Ble</string>
    <string name="BleTextFailed">Erreur</string>
    <string name="textMenu">Bienvenu !</string>
    <string name="textLogin">Bienvenue !</string>
    <string name="Menutt">Wheel-Share vous propose :</string>
    <string name="Mapsbutton">Maps</string>
    <string name="chatbutton">Chat</string>
    <string name="MenuTxt">Welcome to your fav app :</string>
    <string name="title_activity_maps3">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="place_name">places_name</string>
    <string name="place_address">place_address</string>
    <string name="place_hours">place_hours</string>
    <string name="showOnMap">showOnMap</string>
    <string name="title_activity_view_directions">Map</string>
    <string name="Viewdirection">VIEW DIRECTION</string>
    <string name="pharmacyShow">pharmacy</string>
    <string name="hospitalShow">hospital</string>
    <string name="PinMarker">Pin</string>
    <string name="parkingMarker">Parking</string>
    <string name="market">Market</string>
    <string name="addPin">Pin</string>
    <string name="CAREFUL">CAREFUL</string>
    <string name="DANGER">DANGER</string>
    <string name="DONE">DONE</string>
    <string name="STOP">STOP</string>
    <string name="start_scan">Lancer le scan BLE</string>
    <string name="scanning">Scan en cours ...</string>
    <string name="lancer_le_scan_ble">Lancer le scan BLE</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="_00">000</string>
    <string name="red">red</string>
    <string name="textview">TextView</string>
    <string name="_10_00">00:00</string>
    <string name="example">example</string>
    <string name="en_attente_de_connexion">En attente de connexion</string>
    <string name="type">Type :</string>
    <string name="taille">Taille :</string>
    <string name="poids">Poids :</string>
    <string name="telephone_non_compatible_avec_le_ble">RATE</string>
    <string name="notifier">notifier</string>
    <string name="ecrire">ecrire</string>
    <string name="_lecture">lecture</string>
    <string name="entrez_une_valeur">entrer une valeur</string>
    <string name="acc_s_g_n_rique">acc</string>
    <string name="arrow">arrow</string>
</resources>
