<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="129dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:text="@string/textLogin"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="183dp"
        android:layout_height="203dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/wheelshare" />

    <EditText
        android:id="@+id/editIdentifiant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:shadowColor="#77B5FE"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editMotDePasse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:shadowColor="#77B5FE"
        app:layout_constraintStart_toStartOf="@+id/editIdentifiant"
        app:layout_constraintTop_toBottomOf="@+id/editIdentifiant" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="@string/IdentifiantTexte"
        android:textColor="#77B5FE"
        app:layout_constraintBottom_toTopOf="@+id/editIdentifiant"
        app:layout_constraintStart_toStartOf="@+id/editIdentifiant" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MotDePasseTexte"
        android:textColor="#77B5FE"
        app:layout_constraintBottom_toTopOf="@+id/editMotDePasse"
        app:layout_constraintStart_toStartOf="@+id/editMotDePasse" />

    <Button
        android:id="@+id/Validatebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#77B5FE"
        android:text="@string/ValiderTexte"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMotDePasse" />

</androidx.constraintlayout.widget.ConstraintLayout>